--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=311,59
-Size=840,754
+Pos=27,-38
+Size=840,680
 Collapsed=0
 
 [Window][hiiiiiii]
